# Hopn-Test-Project

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  cost_center_create_new.py  pyproject.toml  pytest.ini  requirements-test.txt  simple_login_test.py
.github/workflows/: ci.yml
dataInput/cost_centers/: test_data.py
dataInput/expense_types/: test_data.py
dataInput/reset_password/: test_reset_password_data.py
dataInput/signup/: test_emails.py  test_signup_data.py
pages/cost_centers/: cost_centers_page.py
pages/expense_types/: expense_types_page.py
pages/login/: login_page.py
pages/reset_password/: reset_password_page.py
pages/signup/: signup_page.py
scripts/: update_all_imports.py  update_imports.py
test_reports/: Login_Edge_Case_Validation_20250813_175441.txt  Login_Edge_Case_Validation_20250819_143757.txt  Login_Edge_Case_Validation_20250822_162439.txt  Login_Edge_Case_Validation_20250828_145852.txt
tests/: conftest.py  tc001_01.py  tc001_02.py  tc003.py  tc005_01.py
tests/Invoices/page_object/: invoices_page.py
tests/config/: test_config.py
tests/cost_centers/: __init__.py
tests/expense_types/: __init__.py  base_test.py
tests/homepage/: __init__.py  tc_accessibility_01.py  tc_book_demo_01.py  tc_forms_01.py  tc_login_button_responsive.py  tc_pageload_01.py  tc_performance_01.py  tc_responsive_01.py  tc_test_cross_browser_01.py  tc_visual_01.py
tests/page_components/: table_component.py
tests/reset_password/: __init__.py
tests/utils/: email_utils.py  network_utils.py  screenshot_utils.py  test_report.py
(+57 files in other folders)
