[project]
name = "playwright01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright",
    "python-dotenv",
]

[project.optional-dependencies]
test = [
    "pytest-rerunfailures>=15.1",
]

[dependency-groups]
dev = [
    "pytest-playwright>=0.7.0",
]
